--- a/app/src/main/res/layout/activity_local_search.xml
+++ b/app/src/main/res/layout/activity_local_search.xml
@@ -25,8 +25,7 @@
             android:layout_marginLeft="10dp"
             android:src="@mipmap/img_back"
             android:layout_marginRight="10dp"
-            android:contentDescription="TODO" />
-
+            android:tint="@color/white"/>
 
         <EditText
             android:id="@+id/edt_title_search"
@@ -34,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/white"
+            android:textColorHint="@color/hint"
             android:theme="@style/SearchEditText"
             android:maxLines="1"
             android:inputType="text"
@@ -41,18 +41,13 @@
 
         <ImageView
             android:id="@+id/img_title_clear"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_marginRight="10dp"
-            android:src="@mipmap/img_close"
+            android:src="@drawable/ic_close"
+            android:tint="@color/white"
             android:visibility="gone"/>
 
-        <!--<ImageView-->
-            <!--android:id="@+id/img_title_menu"-->
-            <!--android:layout_width="30dp"-->
-            <!--android:layout_height="30dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:src="@mipmap/img_title_menu" />-->
     </LinearLayout>
 
     <LinearLayout
