--- a/app/src/main/res/layout/item_song_list.xml
+++ b/app/src/main/res/layout/item_song_list.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="1"
             android:textSize="16sp"
-            android:textColor="@color/dark_gray"/>
+            android:textColor="@color/main_text"/>
 
         <ImageView
             android:id="@+id/img_playing"
@@ -45,7 +45,7 @@
             android:maxLines="1"
             android:text="歌曲名"
             android:textSize="15sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/main_text"/>
         <TextView
             android:id="@+id/text_song_singer"
             android:layout_width="wrap_content"
@@ -53,12 +53,13 @@
             android:maxLines="1"
             android:text="歌手名"
             android:textSize="10sp"
-            android:textColor="@color/dark_gray"/>
+            android:textColor="@color/sub_text"/>
     </LinearLayout>
     <ImageView
-        android:id="@+id/img_song_list_menu1"
+        android:id="@+id/img_song_list_menu"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:focusable="false"
+        android:tint="@color/main_text"
         android:src="@mipmap/img_song_list_menu"/>
 </LinearLayout>
