--- a/app/src/main/res/layout/item_song_menu.xml
+++ b/app/src/main/res/layout/item_song_menu.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:text="歌单名"
-            android:textColor="@color/shallow_gray"
+            android:textColor="@color/main_text"
             android:textSize="18sp" />
 
         <TextView
