--- a/app/src/main/res/layout/layout_play_notification_big.xml
+++ b/app/src/main/res/layout/layout_play_notification_big.xml
@@ -60,11 +60,11 @@
 
                 <ImageView
                     android:id="@+id/img_close"
-                    android:layout_width="13dp"
-                    android:layout_height="13dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="10dp"
-                    android:src="@mipmap/img_close"
+                    android:src="@drawable/ic_close"
                     android:tint="@color/shallow_gray" />
 
             </RelativeLayout>
