--- a/app/src/main/res/layout/activity_favorite_song.xml
+++ b/app/src/main/res/layout/activity_favorite_song.xml
@@ -23,6 +23,7 @@
 
     </LinearLayout>
     <com.musicplayer.ui.widget.PlayBarLayout
+        android:id="@+id/play_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
