--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,6 +95,7 @@
 
         <!--播放栏-->
         <com.musicplayer.ui.widget.PlayBarLayout
+            android:id="@+id/play_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
