--- a/app/src/main/res/layout/activity_local_search.xml
+++ b/app/src/main/res/layout/activity_local_search.xml
@@ -72,6 +72,7 @@
             android:dividerHeight="0.5dp"/>
 
         <com.musicplayer.ui.widget.PlayBarLayout
+            android:id="@+id/play_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
