--- a/app/src/main/res/layout/activity_network_search.xml
+++ b/app/src/main/res/layout/activity_network_search.xml
@@ -99,6 +99,7 @@
 
 
     <com.musicplayer.ui.widget.PlayBarLayout
+        android:id="@+id/play_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="60dp" />
 </LinearLayout>
