--- a/app/src/main/res/layout/activity_scan_local_song.xml
+++ b/app/src/main/res/layout/activity_scan_local_song.xml
@@ -28,7 +28,7 @@
             android:id="@+id/tv_scanning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="正在扫描"
+            android:text="正在扫描，请稍后..."
             android:textSize="20sp"
             android:textColor="@color/black"
             android:layout_marginBottom="10dp"/>
@@ -45,7 +45,7 @@
             android:id="@+id/btn_scan_all"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="全盘扫描"
+            android:text="开始扫描"
             android:background="@color/title"
             android:textColor="@color/white"/>
     </LinearLayout>
