--- a/app/src/main/res/layout/activity_song_menu.xml
+++ b/app/src/main/res/layout/activity_song_menu.xml
@@ -23,6 +23,7 @@
             android:layout_weight="1"/>
 
         <com.musicplayer.ui.widget.PlayBarLayout
+            android:id="@+id/play_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
