--- a/app/src/main/res/layout/fragment_singer.xml
+++ b/app/src/main/res/layout/fragment_singer.xml
@@ -31,12 +31,12 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/cardview_singer"
-            android:layout_alignParentBottom="true">
+            android:layout_below="@id/cardview_singer">
 
             <com.musicplayer.ui.widget.SingleLrcView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:id="@+id/single_lrc_view"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
